2004-11-23  Carl Worth  <cworth@cworth.org>

	* test/text_cache_crash.c: Add note that bug has been fixed.
	(main): Instrumentation code for testing cache destruction.

	* test/cairo_test.c (cairo_test): Support tests that produce no
	output, (don't check image if (width,height) == (0,0)).

	* src/cairoint.h: Add #include <assert.h> here rather than in
	multiple .c files.

	* src/cairo_cache.c: Add const qualifier to static
	cache_arrangements table.
	(_cache_sane_state): Remove refcount assertion as it it false
	during the cairo_cache_destroy.
	(_cache_sane_state): #include <assert.h> moved up to cairoint.h
	(_entry_destroy): Fix bug in assertion (used_memory >=
	entry->memory), not >.
	(_cairo_cache_destroy): Fix timing of refcount decrement so that
	the destroy function actually works.

2004-11-14  Carl Worth  <cworth@cworth.org>

	* src/cairo_gstate.c (_cairo_gstate_select_font): Don't destroy a
	NULL font.

2004-11-13  Carl Worth  <cworth@cworth.org>

	* src/cairo_gstate.c (_cairo_gstate_select_font): Unconditionally
	destroy the old font, (otherwise, if the same font was selected
	twice in a row, a reference was lost to it, leading to assertion
	failures).

2004-11-12  Stuart Parmenter  <pavlov@pavlov.net>
	* src/cairo_gdip_font.cpp:
	* src/cairo_gdip_surface.cpp: Added GDI+ backend to Cairo.

2004-11-12  Carl Worth  <cworth@cworth.org>

	* src/cairo_font.c (_font_cache_hash, _font_cache_create_entry): 
	* src/cairo_ft_font.c (_cairo_ft_font_text_to_glyphs): Move
	declarations above statements to satisfy pre-C99 compilers. Thanks
	to Michael Johnson <ahze@ahze.net>.

2004-11-09  Carl Worth  <cworth@cworth.org>

	* test/text_rotate.c (NUM_TEXT): Increase size and increase number
	of different angles drawn.
	(draw): Fix broken usage of extents (missing bearings), add
	stroked bounding box (shifted out by 0.5 units to just abut the
	text), and increase position adjustments to make room for this
	larger box.