@@ -72,6 +72,7 @@ cairo_test_t test = {
 static void
 draw (cairo_t *cr, int width, int height)
 {
+    /* Once there was a bug that choked when selecting the same font twice. */
     cairo_select_font(cr, "sans", CAIRO_FONT_SLANT_NORMAL, CAIRO_FONT_WEIGHT_BOLD);
     cairo_scale_font(cr, 40.0);
 
@@ -79,6 +80,11 @@ draw (cairo_t *cr, int width, int height)
     cairo_scale_font(cr, 40.0);
     cairo_move_to(cr, 10, 50);
     cairo_show_text(cr, "hello");
+
+    /* Then there was a bug that choked when selecting a font too big
+     * for the cache. */
+    cairo_scale_font (cr, 500);
+    cairo_show_text (cr, "hello");
 }
 
 int
